2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/changing-defaults.itely (Which properties to
	change): fixes.

2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* po/fr.po: update.

2004-03-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/wilhelmus.ly: More original lyrics.  Add to examples.

	* stepmake/stepmake/generic-targets.make ($(outdir)/dummy.dep):
	Reinstate old code that issues warning.  Fixes --srcdir build.

2004-03-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/wilhelmus.ly: New file.

	* Documentation/user/notation.itely: 
	* Documentation/user/introduction.itely:
	* Documentation/user/tutorial.itely: Use quote ly-option instead
	of explicit @quotation.  This fixes too long lilypond linewidths
	resulting in overful hboxes.

	* scripts/lilypond-book.py: Add ly-option: `quote'.

2004-03-30  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* tex/titledefs.tex: Avoid that the first score line is extra
	indented if instrument is defined but not piece.

2004-03-30  Werner Lemberg  <wl@gnu.org>

	* Documentation/user/macros.itexi (@internalsref) [info]: Prepend
	`lilypond/' to info file name.
	(@usermanref) [info]: New variant.

	* scm/documentation-generate.scm: Fix definition of @usermanref
	and @glossaryref (in the `ifinfo' branch) by prepending `lilypond/'
	to info file name.

2004-03-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/changing-defaults.itely (Interpretation
	contexts): rewrite introduction.

2004-03-30  Ferenc Wagner  <wferi@tba.elte.hu>

	* scm/define-markup-commands.scm: Use TeX accents instead of
	straight iso-8859-1 encoding in the doc string.

2004-03-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/tutorial.itely (A lead sheet): remove extra
	space after dotted duration.

2004-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/introduction.itely: 
	* Documentation/user/notation.itely:
	* Documentation/user/tutorial.itely: Up all relative examples.