@@ -1,5 +1,7 @@
 2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/stem-tremolo.cc (print):	don't crash for no-stem.
+
 	* Documentation/user/changing-defaults.itely (Which properties to
 	change): fixes.
 
